--- a/meshtastic.ini
+++ b/meshtastic.ini
@@ -7,7 +7,7 @@ preset = LONG_FAST
 slot = # leave blank to use default slot
 
 [meshtastic]
-mute = false # disable rebroadcast
+mute = true # disable rebroadcast
 short_name = Test
 long_name = Test Client
 macaddr = 334455667788
