update config and notes

--- a/meshtastic.ini
+++ b/meshtastic.ini
@@ -8,9 +8,9 @@ slot = # leave blank to use default slot
 
 [meshtastic]
 mute = true # disable rebroadcast
-short_name = Test
-long_name = Test Client
-macaddr = 334455667788
+short_name = mspy # up to 4 bytes
+long_name = Meshtastic.py # up to 36 bytes
+macaddr = 334455667788 # 6 bytes
 hw_model = 84
 is_licensed = false
 public_key =
