--- a/meshtastic.ini
+++ b/meshtastic.ini
@@ -1,5 +1,5 @@
 [interface]
-adapter = sx127x
+transceiver = sx126x
 
 [radio]
 region = TW
@@ -14,3 +14,7 @@ macaddr = 334455667788 # 6 bytes
 hw_model = 84
 is_licensed = false
 public_key =
+
+[sx126x] # for Ra-01S / Ra-01SH
+dio2_as_rf_switch_ctrl = true # Ra-01S / Ra-01SH use DIO2 to control RF switch
+regulator_mode = 0 # Ra-01S / Ra-01SH use only LDO in all modes
